# proyecto_2_taller_comu

./: .gitignore  .gitignore.save  README.md  dsp_client.cpp  dsp_client.h  dsp_proy2.pro  freq_filter.cpp  freq_filter.h  hilbert_filter_coeffs.h  hilbert_fir.h  jack_client.cpp  jack_client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  prealloc_ringbuffer.h  ubuntu.sh
